# agents_token_os

./: .gitignore  README.md  form-zero-blog-article.md  form-zero-current-baseline.md
Form_zero/: CODEX_FILE_TEST_2.txt  Cargo.toml
Form_zero copy/src/: runtime.rs
Form_zero/src/: db.rs  lib.rs  main.rs  models.rs  runtime.rs  tmp.rs  tools.rs
Form_zero2/: Cargo.toml
Form_zero2/examples/: live_api_replay.rs
Form_zero2/src/: control.rs  db.rs  external_tools.rs  lib.rs  models.rs  peripherals.rs  provider.rs  runtime.rs  tools.rs
gepa_zero/: .gitignore  Cargo.toml  README.md  agents.json  ingredient_repository.json  menu_repository.json  tasks.json
gepa_zero/prompts/: apprentice_system_prompt.txt  delivery_judge_system_prompt.txt  judge_system_prompt.txt  master_system_prompt.txt  optimizer_meta_system_prompt.txt  reflection_suffix.txt  reprompt_suffix.txt
gepa_zero/src/: main.rs  provider.rs
