[package]
name = "gepa_zero"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tiktoken-rs = "0.5"
